--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div id="greeting">Hello Gabi</div>
 
@@ -33,7 +35,11 @@
         <button id="yesBtn">Yes 😊</button>
         <button id="noBtn">No 🙃</button>
     </div>
-    <img id="celebrationGIF" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbTkwaXRzczMxcXJ6NnJhYWRmcDJtNmQ2NGZ5bjczZWthY2F1d2x3MCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ekwEeLxb7G4DW44YaK/giphy.gif" style="display: none; width: 100%; max-width: 600px; margin: auto; top: 50%; left: 50%; transform: translate(-50%, -50%); position: absolute;" alt="Celebration">
+    <img id="celebrationGIF"
+        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbTkwaXRzczMxcXJ6NnJhYWRmcDJtNmQ2NGZ5bjczZWthY2F1d2x3MCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ekwEeLxb7G4DW44YaK/giphy.gif"
+        style="display: none; width: 100%; max-width: 600px; margin: auto; top: 50%; left: 50%; transform: translate(-50%, -50%); position: absolute;"
+        alt="Celebration">
     <script src="script.js"></script>
 </body>
+
 </html>
